--- a/templates/index.twig
+++ b/templates/index.twig
@@ -15,22 +15,26 @@
 {# UP UNTILL THE FOOTER --> #}
 {% block main %}
 
-<div class="container-fluid jumbo">
-    <div class="row">
+<div class="container-fluid p-0 jumbo">
+    <div class="img-row"></div>
+    <div class="row heading-row">  
     <div class="col-sm-12 col-md-6 offset-md-3" id="blur-bg">
         <h1 class="homeHeadline">{{entry.homeHeadline}}</h1>
         <h4 class="subHeadline">{{entry.subHeadline}}</h4>
        <div class="row p-2 button_row">
-                <div class="col-sm-12 col-md-4 pt-3">
+                <div class="col-sm-12 col-md-6 pt-3">
                     <a href="#" class="btn btn-lg btn-success"> <i class="fas fa-plus"></i> Apply Now</a>
                 </div>
-                <div class="col-sm-12 col-md-4 pt-3">
+                <div class="col-sm-12 col-md-6 pt-3">
                     <a href="#" class="btn btn-lg btn-secondary"><i class="fas fa-search"></i> Search Jobs</a>
                 </div>
             </div>    
     </div>    
     </div>
 </div>
+
+
+
 
 {% endblock %}
 
