--- a/web/styles/main.css
+++ b/web/styles/main.css
@@ -56,18 +56,58 @@
       font-size: 1em; } }
 
 .jumbo {
-  background-image: url("/images/header.jpg");
-  background-position: center center;
-  background-size: cover; }
-  .jumbo #blur-bg {
-    margin-top: 400px;
-    margin-bottom: 100px;
-    background-color: rgba(93, 93, 93, 0.8);
-    padding: 30px 80px; }
-    .jumbo #blur-bg h1,
-    .jumbo #blur-bg h4 {
-      color: #fff;
-      font-weight: 700; }
+  position: relative; }
+  .jumbo .img-row {
+    background-image: url("/images/header.jpg");
+    background-position: center center;
+    background-size: cover;
+    height: 600px;
+    background-repeat: no-repeat;
+    position: relative; }
+  .jumbo .heading-row {
+    position: absolute;
+    top: 35%;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 100%; }
+    .jumbo .heading-row #blur-bg {
+      background-color: rgba(93, 93, 93, 0.8);
+      width: 100%; }
+      .jumbo .heading-row #blur-bg h1,
+      .jumbo .heading-row #blur-bg h4 {
+        color: #fff;
+        font-weight: 700; }
+
+@media (max-width: 345px) {
+  .jumbo {
+    background-position: center right;
+    background-size: initial; }
+    .jumbo .img-row {
+      height: 400px; }
+    .jumbo .heading-row #blur-bg {
+      margin-top: -10%;
+      transform: translateX(10%);
+      background-color: rgba(93, 93, 93, 0.5);
+      width: 90%;
+      padding: 20px; }
+      .jumbo .heading-row #blur-bg h1 {
+        font-size: 1.3em; }
+      .jumbo .heading-row #blur-bg h4 {
+        font-size: 1em; } }
+
+@media (min-width: 346px) and (max-width: 500px) {
+  .jumbo {
+    background-position: center right;
+    background-size: initial; }
+    .jumbo .heading-row {
+      transform: translateX(-46%) !important; }
+      .jumbo .heading-row #blur-bg {
+        margin-top: 28%;
+        background-color: rgba(93, 93, 93, 0.5); }
+        .jumbo .heading-row #blur-bg h1 {
+          font-size: 1.8em; }
+        .jumbo .heading-row #blur-bg h4 {
+          font-size: 1.1em; } }
 
 .show {
   display: block !important;
