adding nav links

--- a/templates/partials/_nav.twig
+++ b/templates/partials/_nav.twig
@@ -25,8 +25,8 @@
       </div>
     </div>
     <ul id="driver-tabs">
-        <li><a href="#">OTR</a></li>
-        <li><a href="#">LTL</a></li>
+        <li><a href="/otr">OTR</a></li>
+        <li><a href="/local">Local</a></li>
         <li><a href="#">Warehouse</a></li>
         </ul>
   </div>
