--- a/SCSS/sections/nav.scss
+++ b/SCSS/sections/nav.scss
@@ -68,12 +68,15 @@
             bottom: -50%;
             padding: 15px;
             display: none;
+            z-index: 100;
+            border-radius: 10px;
 
             li {
                 padding: 5px;
 
                 a {
                     color: #fff;
+                    font-weight: bold;
                 }
             }
         }
