--- a/web/styles/main.css
+++ b/web/styles/main.css
@@ -43,11 +43,14 @@
       right: 12%;
       bottom: -50%;
       padding: 15px;
-      display: none; }
+      display: none;
+      z-index: 100;
+      border-radius: 10px; }
       #nav-container #nav-bottom #driver-tabs li {
         padding: 5px; }
         #nav-container #nav-bottom #driver-tabs li a {
-          color: #fff; }
+          color: #fff;
+          font-weight: bold; }
 
 @media (max-width: 345px) {
   #nav-container {
