--- a/SCSS/main.scss
+++ b/SCSS/main.scss
@@ -1,5 +1,9 @@
 @import 'sections/nav.scss';
 @import 'sections/homepage.scss';
+@import 'sections/banner.scss';
+@import 'sections/summary.scss';
+@import 'sections/video.scss';
+@import 'sections/jobs-benefits.scss';
 
 // utlitly functions
 .show{
