--- a/templates/index.twig
+++ b/templates/index.twig
@@ -2,11 +2,11 @@
 
 {# <!-- THIS IS FOR SEO, PARTIALLY TAKEN OUT OF HEAD TAG --> #}
 {% block SEO %}
-    {% for entry in craft.entries.section('home') %}
-        <meta name="keywords" content="{{entry.keywords}}">  
-        <meta name="description" content="{{entry.metaDescription}}">
-        <title>{{entry.titleTag}}</title>
-    {% endfor %}
+{% for entry in craft.entries.section('home') %}
+<meta name="keywords" content="{{entry.keywords}}">
+<meta name="description" content="{{entry.metaDescription}}">
+<title>{{entry.titleTag}}</title>
+{% endfor %}
 {% endblock %}
 
 
@@ -14,27 +14,88 @@
 {# <!-- THIS IS THE MAIN CONTENT THAT YOU WILL SEE ON THE HOME PAGE  #}
 {# UP UNTILL THE FOOTER --> #}
 {% block main %}
-
+{# JUMBOTRON #}
 <div class="container-fluid p-0 jumbo">
     <div class="img-row"></div>
-    <div class="row heading-row">  
-    <div class="col-sm-12 col-md-6 offset-md-3" id="blur-bg">
-        <h1 class="homeHeadline">{{entry.homeHeadline}}</h1>
-        <h4 class="subHeadline">{{entry.subHeadline}}</h4>
-       <div class="row p-2 button_row">
+    <div class="row heading-row">
+        <div class="col-sm-12 col-md-6 offset-md-3" id="blur-bg">
+            <h1 class="homeHeadline">{{entry.homeHeadline}}</h1>
+            <h4 class="subHeadline">{{entry.subHeadline}}</h4>
+            <div class="row p-2 button_row">
                 <div class="col-sm-12 col-md-6 pt-3">
                     <a href="#" class="btn btn-lg btn-success"> <i class="fas fa-plus"></i> Apply Now</a>
                 </div>
                 <div class="col-sm-12 col-md-6 pt-3">
                     <a href="#" class="btn btn-lg btn-secondary"><i class="fas fa-search"></i> Search Jobs</a>
                 </div>
-            </div>    
-    </div>    
+            </div>
+        </div>
     </div>
+</div>
+
+{# BANNER IMAGE #}
+<div class="container-fluid p-0" id="banner">
+    <img class="img-fluid" src="/images/banner.png" alt="">
+</div>
+
+
+{# SUMMARY HEADLINE #}
+<div class="container-fluid" id="summary-container">
+    <div class="row summary-header-row">
+        <div class="col-sm-10 offset-sm-1 col-md-8 offset-md-2">
+            <h4 class="text-center">CDL-A Local Truck Drivers Earn $1,100+ Per Week ! Get Home Daily</h4>
+        </div>
+    </div>
+    <div class="row" id="summary-content">
+        <div class="col-sm-8 offset-sm-2 col-md-8 offset-md-2 p-3">
+            <p>{{entry.summaryContent}}</p>
+        </div>
+    </div>
+</div>
+
+{# VIDEO SECTION #}
+<div class="container-fluid p-0" id="video-container">
+    <div class="row video-header-row">
+        <div class="col-sm-10 offset-sm-1 col-md-8 offset-md-2">
+            <h4 class="text-center">{{entry.videoHeadline}}</h4>
+        </div>
+    </div>
+    <div class="row video-row">
+        <div class="col-sm-12 col-md-6 offset-md-3 p-0">
+            <div class="embed-responsive embed-responsive-16by9">
+                <iframe width="560" height="315" src="{{entry.videoEmbed}}" frameborder="0"
+                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+                {# <iframe width="560" height="315" src="https://www.youtube.com/embed/q_N7telJgRA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> #}
+            </div>
+        </div>
+    </div>
+</div>
+
+
+{# JOBS and BENEFITS CONTAINER #}
+<div class="container-fluid" id="jobs-benefits">
+    <div class="row">
+        {# offerings, left side, top when on mobile #}
+        <div class="col-sm-12 col-md-6">
+            <h3 class="jobs-benefits-header"></h3>
+            <p class="jobs-benefits-content"></p>
+
+        </div>
+    </div>
+
+    {# off, right side, Bottom when on mobile #}
+    <div class="col-sm-12 col-md-6">
+        <h3 class="jobs-benefits-header"></h3>
+        <p class="jobs-benefits-content"></p>
+    </div>
+</div>
 </div>
 
 
 
 
-{% endblock %}
 
+
+
+{% endblock %}
