saving more progress to homepage

--- a/SCSS/main.scss
+++ b/SCSS/main.scss
@@ -4,6 +4,7 @@
 @import 'sections/summary.scss';
 @import 'sections/video.scss';
 @import 'sections/jobs-benefits.scss';
+@import 'sections/footer.scss';
 
 // utlitly functions
 .show{
