--- a/SCSS/sections/video.scss
+++ b/SCSS/sections/video.scss
@@ -27,7 +27,7 @@
 @media (max-width: 767px) {
     #video-container {     
         .video-row {            
-            padding: 0px;
+            padding:0 !important;
         }
     }
 }
