--- a/templates/index.twig
+++ b/templates/index.twig
@@ -54,7 +54,7 @@
 </div>
 
 {# VIDEO SECTION #}
-<div class="container-fluid p-0" id="video-container">
+<div class="container-fluid" id="video-container">
     <div class="row video-header-row">
         <div class="col-sm-10 offset-sm-1 col-md-8 offset-md-2">
             <h4 class="text-center">{{entry.videoHeadline}}</h4>
@@ -77,19 +77,21 @@
 <div class="container-fluid" id="jobs-benefits">
     <div class="row">
         {# offerings, left side, top when on mobile #}
-        <div class="col-sm-12 col-md-6">
-            <h3 class="jobs-benefits-header"></h3>
-            <p class="jobs-benefits-content"></p>
+        <div class="col-sm-12 col-md-6 p-0 jobs-benefits-col">
+            <h3 class="jobs-benefits-header text-center">{{entry.offeringHeadline}}</h3>
+            <div class="col-10 offset-1">
+                <div class="jobs-benefits-content py-5">{{entry.offeringContent}}</div>
+            </div>
+        </div>
 
+        {# off, right side, Bottom when on mobile #}
+        <div class="col-sm-12 col-md-6 p-0 jobs-benefits-col">
+            <h3 class="jobs-benefits-header text-center">{{entry.qualificationHeadline}}</h3>
+            <div class="col-10 offset-1">
+                <div class="jobs-benefits-content py-5">{{entry.qualificationContent}}</div>
+            </div>
         </div>
     </div>
-
-    {# off, right side, Bottom when on mobile #}
-    <div class="col-sm-12 col-md-6">
-        <h3 class="jobs-benefits-header"></h3>
-        <p class="jobs-benefits-content"></p>
-    </div>
-</div>
 </div>
 
 
