--- a/templates/partials/_footer.twig
+++ b/templates/partials/_footer.twig
@@ -1,110 +1,12 @@
-
-
-
-
-
-
-{# Call to action section #}
-<div class="container-fluid bg-secondary">
-  <div class="row">
-    <div class="col-8 mx-auto text-center p-5">
-      <a href="{{global.applyLink}}" class="btn btn-lg btn-primary p-3 mx-1">Apply Now!</a>
-      <a href="tel:{{global.phone}}" class="btn btn-lg btn-primary p-3 mx-1">Call Now!</a>
-      <a href="/jobs" class="btn btn-lg btn-primary p-3 mx-1">Search Jobs</a>
-    </div>
+<footer class="container-fluid p-4">
+<div class="row">
+<div class="col">
+  <a class="d-block text-center" href="/"><img class="img-fluid" src="/images/conversion-logo.png" alt=""></a>
   </div>
-</div>
-
-<!-- Footer -->
-<footer class="page-footer font-small indigo bg-dark">
-
-  <!-- Footer Links -->
-  <div class="container text-center text-md-left">
-
-    <!-- Grid row -->
-    <div class="row">
-
-      <!-- Grid column -->
-      <div class="col-md-3 mx-auto">
-
-        <!-- Links -->
-        <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Links</h5>
-
-        <ul class="list-unstyled">
-          <li>
-            <a href="#!">Very long link 1</a>
-          </li>
-
-        </ul>
-
-      </div>
-      <!-- Grid column -->
-
-      <hr class="clearfix w-100 d-md-none">
-
-      <!-- Grid column -->
-      <div class="col-md-3 mx-auto">
-
-        <!-- Links -->
-        <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Links</h5>
-
-        <ul class="list-unstyled">
-          <li>
-            <a href="#!">Link 1</a>
-          </li>
-        </ul>
-
-      </div>
-      <!-- Grid column -->
-
-      <hr class="clearfix w-100 d-md-none">
-
-      <!-- Grid column -->
-      <div class="col-md-3 mx-auto">
-
-        <!-- Links -->
-        <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Links</h5>
-
-        <ul class="list-unstyled">
-          <li>
-            <a href="#!">Link 1</a>
-          </li>
-        </ul>
-
-      </div>
-      <!-- Grid column -->
-
-      <hr class="clearfix w-100 d-md-none">
-
-      <!-- Grid column -->
-      <div class="col-md-3 mx-auto">
-
-        <!-- Links -->
-        <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Links</h5>
-
-        <ul class="list-unstyled">
-          <li>
-            <a href="#!">Link for pat</a>
-          </li>
-        </ul>
-
-      </div>
-      <!-- Grid column -->
-
-    </div>
-    <!-- Grid row -->
-
   </div>
-  <!-- Footer Links -->
-
-  <!-- Copyright -->
-  <div class="footer-copyright text-center py-3">© 2020 Copyright:
-    <a href="https://mdbootstrap.com/education/bootstrap/"> MDBootstrap.com</a>
-  </div>
-  <!-- Copyright -->
-
 </footer>
-<!-- Footer -->
+
+
 
 <!-- WOW JS -->
 <!-- needs animate.css to work -->
