--- a/SCSS/main.scss
+++ b/SCSS/main.scss
@@ -1,10 +1,12 @@
-@import 'sections/nav.scss';
-@import 'sections/homepage.scss';
-@import 'sections/banner.scss';
-@import 'sections/summary.scss';
-@import 'sections/video.scss';
-@import 'sections/jobs-benefits.scss';
-@import 'sections/footer.scss';
+// @import 'sections/nav.scss';
+// @import 'sections/homepage.scss';
+// @import 'sections/banner.scss';
+// @import 'sections/summary.scss';
+// @import 'sections/video.scss';
+// @import 'sections/jobs-benefits.scss';
+// @import 'sections/footer.scss';
+
+@import 'sections/index/index.scss';
 
 // utlitly functions
 .show{
