--- a/templates/pages/_entry.twig
+++ b/templates/pages/_entry.twig
@@ -2,51 +2,84 @@
 
 {# <!-- THIS IS FOR SEO, PARTIALLY TAKEN OUT OF HEAD TAG --> #}
 {% block SEO %}
+{% for entry in craft.entries.section('home') %}
 <meta name="keywords" content="{{entry.keywords}}">
 <meta name="description" content="{{entry.metaDescription}}">
 <title>{{entry.titleTag}}</title>
+{% endfor %}
 {% endblock %}
 
 
 
-{# <!-- THIS IS THE MAIN CONTENT THAT YOU WILL SEE ON THE ENTRY PAGE 
-UP UNTILL THE FOOTER --> #}
+{# <!-- THIS IS THE MAIN CONTENT THAT YOU WILL SEE ON THE HOME PAGE  #}
+{# UP UNTILL THE FOOTER --> #}
 {% block main %}
-<div class="container-fluid p-5" id="header-bg">
-        <h1 class="text-center text-white mt-5">{{entry.homeHeadline}}</h1>
-        <img class="mx-auto d-block pt-4" src="/images/logo.png" alt="">
-</div>
-
-<!-- TOP ROW -->
-<div class="container-fluid bg-primary">
-    <div class="container">
-        <div class="row">
-            {# left #}
-            <div class="col-sm-12 col-md-6">
-                <h2 class="wow headline fadeInLeftBig">{{entry.headerFade}}</h2>
-            </div>
-            {# Right #}
-            <div class="col-sm-12 col-md-6">
-                <p>{{entry.companyDetails}}</p>
+{# JUMBOTRON #}
+<div class="container-fluid p-0 jumbo">
+    <div class="img-row"></div>
+    <div class="row heading-row">
+        <div class="col-sm-12 col-md-6 offset-md-3" id="blur-bg">
+            <h1 class="homeHeadline">{{entry.homeHeadline}}</h1>
+            <h4 class="subHeadline">{{entry.subHeadline}}</h4>
+            <div class="row p-2 button_row">
+                <div class="col-sm-12 col-md-6 pt-3">
+                    <a href="#" class="btn btn-lg btn-success"> <i class="fas fa-plus"></i> Apply Now</a>
+                </div>
+                <div class="col-sm-12 col-md-6 pt-3">
+                    <a href="#" class="btn btn-lg btn-secondary"><i class="fas fa-search"></i> Search Jobs</a>
+                </div>
             </div>
         </div>
     </div>
 </div>
 
-<!-- BOTTOM ROW -->
-<div class="container-fluid bg-light">
-<div class="container">
+{# BANNER IMAGE #}
+<div class="container-fluid p-0" id="banner">
+    <img class="img-fluid" src="/images/banner.png" alt="">
+</div>
+
+
+{# SUMMARY HEADLINE #}
+<div class="container-fluid" id="summary-container">
+    <div class="row summary-header-row">
+        <div class="col-sm-10 offset-sm-1 col-md-8 offset-md-2">
+            <h4 class="text-center">CDL-A Local Truck Drivers Earn $1,100+ Per Week ! Get Home Daily</h4>
+        </div>
+    </div>
+    <div class="row" id="summary-content">
+        <div class="col-sm-8 offset-sm-2 col-md-8 offset-md-2 p-3">
+            <p>{{entry.summaryContent}}</p>
+        </div>
+    </div>
+</div>
+
+
+
+{# JOBS and BENEFITS CONTAINER #}
+<div class="container-fluid" id="jobs-benefits">
     <div class="row">
-        {# left #}
-        <div class="col-sm-12 col-md-6">
-            <p>{{entry.benefits}}</p>
+        {# offerings, left side, top when on mobile #}
+        <div class="col-sm-12 col-md-6 p-0 jobs-benefits-col">
+            <h3 class="jobs-benefits-header text-center">{{entry.offeringHeadline}}</h3>
+            <div class="col-10 offset-1">
+                <div class="jobs-benefits-content py-5">{{entry.offeringContent}}</div>
+            </div>
         </div>
-        {# Right #}
-        <div class="col-sm-12 col-md-6">
-            <p>{{entry.qualification}}</p>
+
+        {# off, right side, Bottom when on mobile #}
+        <div class="col-sm-12 col-md-6 p-0 jobs-benefits-col">
+            <h3 class="jobs-benefits-header text-center">{{entry.qualificationHeadline}}</h3>
+            <div class="col-10 offset-1">
+                <div class="jobs-benefits-content py-5">{{entry.qualificationContent}}</div>
+            </div>
         </div>
-    </div>
     </div>
 </div>
+
+
+
+
+
+
 
 {% endblock %}
