--- a/templates/pages/_entry.twig
+++ b/templates/pages/_entry.twig
@@ -26,7 +26,7 @@
                     <a href="#" class="btn btn-lg btn-success"> <i class="fas fa-plus"></i> Apply Now</a>
                 </div>
                 <div class="col-sm-12 col-md-6 pt-3">
-                    <a href="#" class="btn btn-lg btn-secondary"><i class="fas fa-search"></i> Search Jobs</a>
+                    <a href="/jobs" class="btn btn-lg btn-secondary"><i class="fas fa-search"></i> Search Jobs</a>
                 </div>
             </div>
         </div>
