refactoring the simple search functionality

--- a/templates/partials/_nav.twig
+++ b/templates/partials/_nav.twig
@@ -9,8 +9,8 @@
           <li><a href="#" id="search-trigger"><i class="fas fa-search"></i>&nbsp; <strong>Search</strong></a></li>
           <li><i class="fas fa-circle"></i><a href="#"> &nbsp;Apply Now</a></li>
         </ul>
-        <form class="form-inline" id="general-search">
-          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+        <form class="form-inline" id="general-search"  action ="{{url('search/results')}}"> 
+          <input name="q" class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
           <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
         </form>
       </div>
