deleting unused files and refactoring search filter

--- a/templates/searchjobs/index.twig
+++ b/templates/searchjobs/index.twig
@@ -16,7 +16,7 @@
 
     {# select zipcode #}
     {# <input type="text" "zipcode" placeholder="zipcode" title="zipcode" class="form-control"> #}
-   <input type="tel" name="zipcode" pattern="[0-9]*" placeholder="Zip Code" title="zipcode" max="99999" class="form-control" />
+   {# <input type="tel" name="zipcode" pattern="[0-9]*" placeholder="Zip Code" title="zipcode" max="99999" class="form-control" /> #}
 
     <input type="submit" value="Search" class="btn btn-success">
     
