sort of resolved search issue

--- a/templates/searchjobs/index.twig
+++ b/templates/searchjobs/index.twig
@@ -6,6 +6,7 @@
 
     {# SELECT STATE #}
     <select name="state" class="form-control" id="">
+    <option value=""></option>
         <option value="alabama">alabama</option>
         <option value="tennessee">tennessee</option>
         <option value="illinois">illinois</option>
