adding and refining search styling

--- a/templates/jobs/_entry.twig
+++ b/templates/jobs/_entry.twig
@@ -14,7 +14,10 @@ UP UNTILL THE FOOTER --> #}
     <div class="container p-5">
         <div class="row">
             <div class="col-sm-10 offset-sm-1 col-md-6 offset-md-4">
-
+                {{ entry.jobLocation.embed({
+    id: 'map',
+    markers: [{}],
+}) }}
             </div>
         </div>
         <div class="row">
