fixing conversion nav logo

--- a/templates/partials/_nav.twig
+++ b/templates/partials/_nav.twig
@@ -20,7 +20,7 @@
   <div class="container-fluid" id="nav-bottom">
     <div class="row">
       <div class="col-sm-12 col-md-8 offset-md-2">
-        <img src="images/conversion-logo.png" alt="">
+        <img src="/images/conversion-logo.png" alt="">
         <a href="#" id="driver-tab-trigger">Company Driver&nbsp;<i class="fas fa-chevron-down"></i></a>
       </div>
     </div>
