--- a/templates/jobs/index.twig
+++ b/templates/jobs/index.twig
@@ -17,8 +17,13 @@
     <div class="row">
         {# map placeholder #}
         <img class="img-fluid" src="/images/map.JPG" alt="">
+
     </div>
 </div>
+
+
+
+{# SEARCH FOR JOBS HEADER #}
 <div class="container-fluid" id="search-header">
     <div class="row">
         <div class="col-sm-10 offset-sm-1 col-md-6 offset-md-3">
@@ -44,18 +49,31 @@
     {% for entry in pageEntries %}
     <div class="row p-4">
         <div class="col-sm-8 offset-sm-2 col-md-6 offset-md-3 bg-light p-2">
-
-                <h3 class="job-header">{{entry.jobTitle}}</h3>
-                <p> <strong><em>Truck:</em></strong> {{entry.truckType}}</p>
-                <p><strong><em>State</em></strong> {{entry.state}}</p>
-                <p><strong><em>City</em></strong> {{entry.city}}</p>
-                <a class="btn btn-small btn-details" href="/jobs/{{entry.slug}}">Get More Details &nbsp; <i class="fas fa-arrow-right"></i> </a>
-                <p class="pt-2"><strong>Benefits: </strong>
-                    {% for option in entry.jobBenefits %}
-                    {{ option.value }}
-                    {# Value: {{ option }} or {{ option.value }} #}
-                    {% endfor %}
-                </p>         
+            <div class="row">
+                <div class="col-sm-12 col-md-6">
+                    <h3 class="job-header">{{entry.jobTitle}}</h3>
+                    <p> <strong><em>Truck:</em></strong> {{entry.truckType}}</p>
+                    <p><strong><em>State</em></strong> {{entry.state}}</p>
+                    <p><strong><em>City</em></strong> {{entry.city}}</p>
+                    <a class="btn btn-small btn-details" href="/jobs/{{entry.slug}}">Get More Details &nbsp; <i
+                            class="fas fa-arrow-right"></i> </a>
+                    <p class="pt-2"><strong>Benefits: </strong>
+                        {% for option in entry.jobBenefits %}
+                        {{ option.value }}
+                        {# Value: {{ option }} or {{ option.value }} #}
+                        {% endfor %}
+                    </p>
+                </div>
+                <div class="col-sm-12 col-md-6">
+                    {% set city = entry.city %}
+                    {% set state = entry.state %}
+                    <img src="
+                        {{ craft.maps.img({
+                            center: city  ~ state,
+                        }) }}"
+                    class="img-fluid">
+                </div>
+            </div>
         </div>
     </div>
     {% endfor %}
