refactoring induvidual templates

--- a/templates/jobs/_entry.twig
+++ b/templates/jobs/_entry.twig
@@ -1,3 +1,4 @@
+{# THIS IS THE TEMPLATE FOR AN INDUVIDUAL TEMPLATE #}
 {% extends "_layout" %}
 
 {# <!-- THIS IS FOR SEO, PARTIALLY TAKEN OUT OF HEAD TAG --> #}
@@ -13,26 +14,28 @@ UP UNTILL THE FOOTER --> #}
 <div class="container-fluid pt-5 pb-1 jobs-index">
     <div class="container-fluid bg-light">
         <div class="row p-4">
-
-
-<img src="{{ entry.jobLocation.img({
-    width: 800,
-    height: 600,
-    markers: [{ color: 'blue'}]
-    }) }}" alt="">
-
             <div class="col-sm-8 offset-sm-2 col-md-6 offset-md-3 bg-light p-2">
-                <h3 class="job-header">{{entry.jobTitle}}</h3>
-                <p>{{entry.jobOverview}}</p>
-                {{entry.city}}
-                {{entry.truckType}}
-
-                <p><strong> Benefits include:</strong>
-                    {% for option in entry.jobBenefits %}
-                    {# Label: {{ option.label }} #}
-                    {{ option.label }},
-                    {% endfor %}
-                </p>
+                <div class="row">
+                {# left side of entry, top on Mobile #}
+                    <div class="col-sm-12 col-md-6">
+                        <h3 class="job-header">{{entry.jobTitle}}</h3>
+                        <p>{{entry.jobOverview}}</p>
+                        {{entry.city}}
+                        {{entry.truckType}}
+                        <p><strong> Benefits include:</strong>
+                            {% for option in entry.jobBenefits %}
+                            {# Label: {{ option.label }} #}
+                            {{ option.label }},
+                            {% endfor %}
+                        </p>
+                    </div>
+                    {# Right side of entry, Bottom on Mobile #}
+                    <div class="col-sm-12 col-md-6">
+                        <img src="{{ entry.jobLocation.img({
+                   markers: [{ color: 'blue'}]
+                }) }}" alt="" class="img-fluid">
+                    </div>
+                </div>
             </div>
         </div>
     </div>
